# summoning_masters

1/: CMakeLists.txt  func.cpp  func.h  main.cpp
2/: CMakeLists.txt  test_lab2
2/Dialogue/: main.cpp  main_2.cpp
2/src/: complex_class.cpp  dynamic_class.cpp  simple_class.cpp
2/src/include/: complex_class.h  dynamic_class.h  simple_class.h
2/tests/: catch2.cpp
3/: .gitignore  CMakeLists.txt  game.cpp  heritance_lib.cpp
3/src/: AI.cpp  Graphics_UI.cpp  UI.cpp  heritance_lib.cpp  initiative_creatures.cpp  landscape.cpp  school.cpp  skill.cpp  squad.cpp  summoner.cpp  table_of_schools.cpp
3/src/include/: CMakeLists.txt  classes.hpp  def.hpp  iter_vector.hpp  lab3  main.cpp  matr_main.cpp  matrix.cpp  matrix.hpp  test
3/src/include/dynamic_library/: my_plugin.cpp
3/tests/: catch2.cpp
